--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <div class="klient">Klient 8</div>
         <div class="klient">Klient 9</div>
         <div class="klient" detaliczny="mozetak">Klient 10</div>
+        <input type="password" class="pass" typ="tajne">
+        <input type="password" class="pass">
     </div>
 </body>
 
